fix unavailable api